// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DatePicker should correct render default state 1`] = `
<DatePickerstyles__StyledDatePicker
  allowClear={true}
  format={
    Array [
      "MM/DD/YYYY",
      "YYYY-MM-DD",
      "DD-MM-YYYY",
      "YYYY/MM/DD",
      "MM/DD/YYYY",
      "DD/MM/YYYY",
      "MM-DD-YYYY",
    ]
  }
  getPopupContainer={[Function]}
  onChange={[MockFunction]}
  value={null}
/>
`;

exports[`Component: DatePicker should correct render with defined value 1`] = `
<DatePickerstyles__StyledDatePicker
  allowClear={true}
  format={
    Array [
      "MM/DD/YYYY",
      "YYYY-MM-DD",
      "DD-MM-YYYY",
      "YYYY/MM/DD",
      "MM/DD/YYYY",
      "DD/MM/YYYY",
      "MM-DD-YYYY",
    ]
  }
  getPopupContainer={[Function]}
  onChange={[MockFunction]}
  value={
    Object {
      "add": [Function],
      "diff": [Function],
      "endOf": [Function],
      "format": [Function],
      "isValid": [Function],
      "localeData": [Function],
      "longDateFormat": [Function],
      "startOf": [Function],
      "subtract": [Function],
      "toISOString": [Function],
      "valueOf": [Function],
    }
  }
/>
`;
